<?php die(); ?>
Akeeba Panopticon 1.0.1
================================================================================
! Security update: TinyMCE 6.7.1

Akeeba Panopticon 1.0.0
================================================================================
+ Initial release