@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.0.1
 ================================================================================
 ! Security update: TinyMCE 6.7.1
+# [LOW] Log view: undefined property warning, leads to the site list being empty
 
 Akeeba Panopticon 1.0.0
 ================================================================================
